plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
}

group = 'com.github.mickeer.codegen'
version = '1.0'

java {
    sourceCompatibility = JavaLanguageVersion.of(11)
}

test {
    // Prevents IllegalAccessException when tests dynamically compile code
    jvmArgs += ['--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
    useJUnitPlatform() // Use JUnit 5
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.squareup:javapoet:1.13.0'

    compileOnly 'com.google.auto.service:auto-service:1.0.1'
    annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
    
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'com.google.truth:truth:1.1.3'
 	testImplementation 'com.google.testing.compile:compile-testing:0.19'
}

